--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -1,10 +1,3 @@
-body {
-    display: flex;
-    margin: 0 auto;
-    max-width: $maxScreenWidth;
-    padding: 64px 0;
-}
-
 .center-row {
     display: flex;
     align-items: center;
